Fix missing background on Firefox

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -473,7 +473,7 @@ header .cards-submenu p {
   margin-top: 0;
 }
 
-header .cards-submenu p:has(picture) {
+header .cards-submenu p:nth-child(1) {
   background-color: var(--text-white);
   min-height: 114px;
   overflow: hidden;
